--- a/src/app/components/button-capacity/button-capacity.component.html
+++ b/src/app/components/button-capacity/button-capacity.component.html
@@ -1,8 +1,4 @@
-<button type="button"
-      class="btn btn-danger material-tooltip-main w-100"
-      (click)="onClick()"
->
-      hit
-      <i class="fas fa-bomb"></i> 5
-      <i class="fas fa-fire-alt"></i> - 5
+<button type="button" class="bg-red-500 hover:bg-red-600 text-white py-2 px-4 rounded-full w-full" (click)="onClick()">
+  hit
+  <i class="fa-solid fa-bomb"></i>10
 </button>
