--- a/src/app/components/player-list/player-list.component.html
+++ b/src/app/components/player-list/player-list.component.html
@@ -1,4 +1,4 @@
-<div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
+<div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-3 gap-4 items-center justify-center">
   <app-player-card class="w-full" *ngFor="let player of players" [player]="player"></app-player-card>
 </div>
 
