--- a/src/app/components/winpage/winpage.component.html
+++ b/src/app/components/winpage/winpage.component.html
@@ -45,8 +45,8 @@
       </thead>
       <tbody>
       <tr *ngFor="let player of players">
-        <td class="py-2 px-4">{{ player.date }}</td>
-        <td class="text-right py-2 px-4">{{ player.event }}</td>
+        <td class="py-2 px-4">{{ player.name }}</td>
+        <td class="text-right py-2 px-4">{{ player.pv }} HP</td>
       </tr>
       </tbody>
     </table>
