--- a/src/app/components/button-capacity/button-capacity.component.html
+++ b/src/app/components/button-capacity/button-capacity.component.html
@@ -1,4 +1,5 @@
 
 <button *ngIf="actionType === 'hit'" class="my-1 text-white font-bold py-2 px-4 rounded" (click)="onClickDamage()">Hit</button>
-<button *ngIf="actionType === 'heal'" class="my-1 text-white font-bold py-2 px-4 rounded" (click)="onClickHeal()">Heal</button>
+<button *ngIf="actionType === 'heal'" [disabled]="disabled" class="my-1 text-white font-bold py-2 px-4 rounded" (click)="onClickHeal()">Heal</button>
+
 
