--- a/src/app/components/monster/monster.component.html
+++ b/src/app/components/monster/monster.component.html
@@ -7,7 +7,7 @@
           <div class="boss">
           <div class="flex flex-row justify-center">
             <div class="flex flex-col items-center" id="boss">
-              <img [class.on-fire]="monster?.isMonsterOnFire" [class.on-damage]="monster?.isMonsterOnDamage" [ngClass]="{ 'drop-shadow-custom': !monster?.isMonsterOnFire }" class="w-96 h-auto mx-auto" src="../../../assets/wither.png" alt="monster" />
+              <img [class.on-fire]="monster?.isMonsterOnFire" [class.on-poison]="monster?.isMonsterOnPoison" [class.on-damage]="monster?.isMonsterOnDamage" [ngClass]="{'drop-shadow-custom': !monster?.isMonsterOnFire || !monster?.isMonsterOnPoison}" class="w-96 h-auto mx-auto" src="../../../assets/wither.png" alt="monster" />
             </div>
           </div>
           <app-progress-bar [pv]="monster.pv" [pvMax]="monster.pvMax" bgType="bg-primary" faType="fa-heart" barName=": pv"></app-progress-bar>
