--- a/src/app/components/monster/monster.component.scss
+++ b/src/app/components/monster/monster.component.scss
@@ -1,6 +1,9 @@
 .on-fire {
   animation: flame-effect 1s infinite; /* Animation de dégâts */
 }
+.on-poison {
+  animation: poison-effect 1s infinite; /* Animation de dégâts */
+}
 
 @keyframes flame-effect {
   0% {
@@ -22,6 +25,33 @@
     filter: drop-shadow(2px 4px 6px black);
   }
 }
+
+@keyframes poison-effect {
+  0% {
+    transform: scale(1);
+    filter: drop-shadow(2px 4px 6px black);
+  }
+  48% {
+    filter: sepia(1) saturate(5) hue-rotate(170deg) drop-shadow(2px 4px 6px black) ;
+  }
+  50% {
+    transform: scale(1.05);
+    filter: drop-shadow(2px 4px 6px black) sepia(1) saturate(5) hue-rotate(170deg); /* Blanc */
+  }
+  52% {
+    filter: drop-shadow(2px 4px 6px black) sepia(1) saturate(5) hue-rotate(170deg); /* Rouge */
+  }
+  100% {
+    transform: scale(1);
+    filter: drop-shadow(2px 4px 6px black);
+  }
+}
+
+
+
+
+
+
 
 .on-damage {
   animation: damage-effect 1s; /* Animation de dégâts */
