--- a/src/app/components/winpage/winpage.component.html
+++ b/src/app/components/winpage/winpage.component.html
@@ -1,55 +1,58 @@
-<div class="flex items-center justify-center h-screen bg-gradient-to-bl from-blue-900 to-blue-950">
-<div class="flex flex-col bg-gray-200 border-black border-2 rounded-lg p-8">
-    <div class="flex flex-col space-y-4 items-center">
-      <h1 class="text-6xl text-black font-bold mb-8 text-center">Menu</h1>
-      <p class="text-black text-2xl">Bienvenue dans le jeu !</p>
-    </div>
-    <div class="flex justify-center space-x-4 mt-4">
-      <button class="bg-red-500 hover:bg-red-600 text-white font-bold py-2 px-4 rounded-full w-32" (click)="onJouerClick()">
-        Jouer
-      </button>
-      <button class="bg-orange-400 hover:bg-orange-600 text-white font-bold py-2 px-4 rounded-full w-32">
-        Statistiques
-      </button>
+<div class="flex items-center justify-center min-h-screen bg-gradient-to-bl from-blue-900 to-blue-950">
+  <div class="flex flex-col w-full h-screen items-center justify-center bg-gray-200">
+    <div class="w-full max-w-md p-6 bg-white rounded-xl space-y-8">
+      <h1 class="text-4xl md:text-6xl text-center font-bold text-black">PoloRumble</h1>
+      <div *ngIf="(gameState$ | async) === 'win'">
+        <h1 class="text-3xl font-bold text-green-500">Vous avez tué le boss !</h1>
+      </div>
+
+      <div *ngIf="(gameState$ | async) === 'lose'">
+        <h1 class="text-3xl font-bold text-red-500">Tout vos soldats sont mort !</h1>
+      </div>
+
+      <div *ngIf="(gameState$ | async) !== 'win' && (gameState$ | async) !== 'lose'" class="flex justify-center items-center">
+        <h1 class="text-3xl font-bold">Bienvenue ici !</h1>
+      </div>
+
+      <div class="flex flex-col md:flex-row space-y-2 md:space-y-0 md:space-x-4 justify-between">
+        <button class="btn bg-red-500 hover:bg-red-600 text-white font-bold py-2 px-4 w-full md:w-auto rounded-sm" (click)="onJouerClick()">Jouer</button>
+        <button class="btn bg-blue-600 hover:bg-blue-500 text-white font-bold py-2 px-4 w-full md:w-auto rounded-sm" (click)="Cimetiere()">Cimetière</button>
+      </div>
     </div>
   </div>
-  <div class="flex flex-col justify-end mt-8 md:mt-0 md:pl-8">
-    <table class="table-auto bg-gray-200 rounded-lg shadow-md">
-      <thead>
-      <tr>
-        <th class="text-left bg-blue-600 text-white py-2 px-4">Date</th>
-        <th class="text-right bg-blue-600 text-white py-2 px-4">Événement</th>
-      </tr>
-      </thead>
-      <tbody>
-      <tr>
-        <td class="py-2 px-4">2023-06-01</td>
-        <td class="text-right py-2 px-4">Nouvelle partie</td>
-      </tr>
-      <tr>
-        <td class="py-2 px-4">2023-06-02</td>
-        <td class="text-right py-2 px-4">Score élevé atteint</td>
-      </tr>
-      <tr>
-        <td class="py-2 px-4">2023-06-03</td>
-        <td class="text-right py-2 px-4">Niveau terminé</td>
-      </tr>
-      </tbody>
-    </table>
-    <table class="table-auto bg-gray-200 rounded-lg shadow-md mt-4">
-      <thead>
-      <tr class="text-left bg-blue-600 text-white ">
-        <th class="py-2 px-4">Joueurs</th>
-        <th class="py-2 px-4"></th>
-      </tr>
-      </thead>
-      <tbody>
-      <tr *ngFor="let player of players">
-        <td class="py-2 px-4">{{ player.name }}</td>
-        <td class="text-right py-2 px-4">{{ player.pv }} HP</td>
-      </tr>
-      </tbody>
-    </table>
+  <div class="w-full max-w-3xl mt-8 md:mx-4">
 
+    <div class="flex flex-col justify-end mt-8 md:mt-0 md:pl-8">
+      <table class="table-auto bg-gray-200 rounded-lg shadow-md">
+        <thead>
+        <tr>
+          <th class="text-left bg-blue-600 text-white py-2 px-4">Derniers joueurs morts</th>
+          <th class="text-right bg-blue-600 text-white py-2 px-4"></th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr *ngFor="let recentDeadPlayer of deadPlayers">
+          <td class="py-2 px-4">{{ recentDeadPlayer.name }}</td>
+          <td class="text-right py-2 px-4">{{ recentDeadPlayer.createdAt }}</td>
+        </tr>
+        </tbody>
+      </table>
+
+      <table class="table-auto bg-gray-200 rounded-lg shadow-md mt-4">
+        <thead>
+        <tr class="text-left bg-blue-600 text-white ">
+          <th class="py-2 px-4">Joueurs</th>
+          <th class="py-2 px-4"></th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr *ngFor="let player of players">
+          <td class="py-2 px-4">{{ player.name }}</td>
+          <td class="text-right py-2 px-4">{{ player.pv }} HP</td>
+        </tr>
+        </tbody>
+      </table>
+
+    </div>
   </div>
 </div>
